// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Circle renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-circle circle-picker"
    style="width: 252px; display: flex; flex-wrap: wrap; margin-right: -14px; margin-bottom: -14px;"
  >
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #f44336;"
          tabindex="0"
          title="#f44336"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #e91e63;"
          tabindex="0"
          title="#e91e63"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #9c27b0;"
          tabindex="0"
          title="#9c27b0"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #673ab7;"
          tabindex="0"
          title="#673ab7"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #3f51b5;"
          tabindex="0"
          title="#3f51b5"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #2196f3;"
          tabindex="0"
          title="#2196f3"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #03a9f4;"
          tabindex="0"
          title="#03a9f4"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #00bcd4;"
          tabindex="0"
          title="#00bcd4"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #009688;"
          tabindex="0"
          title="#009688"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #4caf50;"
          tabindex="0"
          title="#4caf50"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #8bc34a;"
          tabindex="0"
          title="#8bc34a"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #cddc39;"
          tabindex="0"
          title="#cddc39"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #ffeb3b;"
          tabindex="0"
          title="#ffeb3b"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #ffc107;"
          tabindex="0"
          title="#ffc107"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #ff9800;"
          tabindex="0"
          title="#ff9800"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #ff5722;"
          tabindex="0"
          title="#ff5722"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #795548;"
          tabindex="0"
          title="#795548"
        />
      </span>
    </div>
    <div
      class="rc-circle__swatch"
      style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: transparent; border-radius: 50%; box-shadow: inset 0 0 0 15px #607d8b;"
          tabindex="0"
          title="#607d8b"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CircleSwatch renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-circle__swatch"
    style="width: 28px; height: 28px; margin-right: 14px; margin-bottom: 14px;"
  >
    <span>
      <div
        class="rc-swatch"
        style="background: transparent; border-radius: 50%;"
        tabindex="0"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`CircleSwatch renders with sizing and spacing 1`] = `
<DocumentFragment>
  <div
    class="rc-circle__swatch"
    style="width: 40px; height: 40px; margin-right: 40px; margin-bottom: 40px;"
  >
    <span>
      <div
        class="rc-swatch"
        style="background: transparent; border-radius: 50%;"
        tabindex="0"
      />
    </span>
  </div>
</DocumentFragment>
`;
